--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -32,6 +32,7 @@
     --primary-color: #14004E;
     --primary-hover-color: #423270;
     --primary-press-color: #372668;
+    --primary-container: #EFE9FF;
     --white-color: #FFFFFF;
     --text00-color: #242424;
     --text01-color: #606C7D;
@@ -377,15 +378,14 @@ body {
 }
 
 @media (max-width: 600px) {
-    .container {
-        margin: 0 16px;
-    }
-
-    .title-md {
-        font-size: 18px;
-        font-weight: 500;
-        line-height: 28px;
-    }
+  .container {
+    margin: 0 16px;
+  }
+  .title-md{
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 28px; 
+  }
 
     .title-sm {
         font-size: 18px;
