--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -31,6 +31,9 @@
 /* rating */
 @import url('../../pages/rating/rating.css');
 
+
+@import url('../../pages/lk_profile/lk_profile.css');
+
 :root {
     --primary-color: #14004E;
     --primary-hover-color: #423270;
@@ -381,14 +384,15 @@ body {
 }
 
 @media (max-width: 600px) {
-  .container {
-    margin: 0 16px;
-  }
-  .title-md{
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 28px; 
-  }
+    .container {
+        margin: 0 16px;
+    }
+
+    .title-md {
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 28px;
+    }
 
     .title-sm {
         font-size: 18px;
@@ -417,4 +421,94 @@ body {
     backdrop-filter: blur(4px);
 }
 
+.gray {
+    color: var(--text01-color);
+}
+
+.dark {
+    color: var(--text00-color);
+}
+
+.primary {
+    color: var(--primary-color);
+}
+
+.universal__input {
+    display: flex;
+    padding: 16px;
+    color: var(--primary-color);
+    background-color: var(--base00-color);
+    border-radius: 8px;
+    outline: none;
+    border: unset;
+    height: 56px;
+}
+
+.universal__input::placeholder {
+    color: var(--text02-color);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+}
+
+.universal__checkbox {
+    width: 24px;
+    height: 24px;
+    padding: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--text02-color);
+}
+
+.universal__checkbox-inside {
+    background-color: var(--primary-color);
+    width: 100%;
+    height: 100%;
+}
+
+.universal__select {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    position: relative;
+    color: var(--text02-color);
+    padding: 16px;
+    border-radius: 8px;
+    background: var(--base00-color);
+    border: none;
+}
+
+.universal__select-inside {
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    transition: .4s;
+}
+.universal__select.active {
+    background: var(--white-color);
+}
+.universal__select.active .universal__select-inside{
+    display: flex;
+    flex-direction: column;
+    background: var(--white-color);
+    width: 100%;
+    left: 0;
+    top: 0px;
+    padding: 0 16px;
+    border-radius: 8px;
+    color: var(--base02-color);
+    gap: 4px;
+    max-height: 164px;
+    overflow: auto;
+    font-weight: 500;
+    opacity: 1;
+    visibility: visible;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15), 0px 4px 12px 3px rgba(0, 0, 0, 0.10);
+    z-index: 10;
+}
+.universal__select-inside-item{
+    padding: 16px;
+}
 /* event-card */
