--- a/pages/publish_events_detail/publish_events_detail.css
+++ b/pages/publish_events_detail/publish_events_detail.css
@@ -41,6 +41,13 @@
 .detail__content-left {
     width: calc(25% - 12px);
 }
+.detail__content-left.profile {
+    width: calc(30% - 12px);
+}
+.detail__content-right.profile {
+    width: calc(70% - 12px);
+
+}
 
 .detail__content-right-info-item:nth-child(1) {
     max-width: 553px;
@@ -229,5 +236,10 @@
     .detail__content-right-info-item:nth-child(2){
         max-width: unset;
     }
-    
+    .detail__content-left.profile{
+        width: 100%;
+    }
+    .detail__content-right.profile{
+        width: 100%;
+    }
 }
