--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -31,8 +31,11 @@
 /* rating */
 @import url('../../pages/rating/rating.css');
 
-
 @import url('../../pages/lk_profile/lk_profile.css');
+
+/* lc-events */
+@import url('../../pages/lk_events/lk_events.css');
+
 
 :root {
     --primary-color: #14004E;
