--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -40,6 +40,8 @@
 
 @import url('../../pages/lk_events_history/lk_events_history.css');
 
+/* lk_score__and__rating */
+@import url('../../pages/lk_score_and_rating/lk_scode_and_rating.css');
 
 :root {
     --primary-color: #14004E;
