--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -43,6 +43,10 @@
 /* lk_score__and__rating */
 @import url('../../pages/lk_score_and_rating/lk_scode_and_rating.css');
 
+/* lk_profile_org */
+
+@import url('../../pages/lk_org_profile/lk_profile_org.css');
+
 :root {
     --primary-color: #14004E;
     --primary-hover-color: #423270;
@@ -445,6 +449,10 @@ a {
 
 .dark {
     color: var(--text00-color);
+}
+
+.pink {
+    color: var(--pink-color);
 }
 
 .primary {
