task/BASH-20 not end, task/BASH-21

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -47,6 +47,10 @@
 
 @import url('../../pages/lk_org_profile/lk_profile_org.css');
 
+/* lk_org_events */
+@import url('../../pages/lk_org_events/lk_org_events.css');
+
+
 :root {
     --primary-color: #14004E;
     --primary-hover-color: #423270;
