--- a/assets/styles/components/universal-filter/universal-filter.css
+++ b/assets/styles/components/universal-filter/universal-filter.css
@@ -11,6 +11,7 @@
     align-items: center;
     gap: 8px;
     font-weight: 500;
+    width: 100%;
 }
 .universal__filter-items{
     position: absolute;
