--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -47,6 +47,7 @@
 
 @import url('../../pages/lk_org_profile/lk_profile_org.css');
 
+@import url('../../pages/lk_org_events/lk_org_events.css');
 
 :root {
     --primary-color: #14004E;
