--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -347,6 +347,10 @@ a {
     color: var(--primary-color);
 }
 
+.text-pink {
+    color: var(--pink-color)
+}
+
 .text-gray {
     color: var(--text01-color);
 }
