--- a/pages/about_us/about_us.css
+++ b/pages/about_us/about_us.css
@@ -157,17 +157,14 @@
   margin-right: 5px;
 }
 
-.about-us__running-lines {
-  margin-top: 96px;
-}
-
 
 /* RUNNINE_LINE */
 
 
 .about-us__running-lines {
+  margin-top: 96px;
   margin-bottom: 100px;
-  overflow-y: scroll;
+  overflow: hidden;
   color: var(--primary-color);
 }
 
