--- a/pages/lk_events/lk_events.css
+++ b/pages/lk_events/lk_events.css
@@ -34,3 +34,9 @@
         flex-direction: column;
     }
 }
+.profile-right-back{
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    font-weight: 500;
+}
