--- a/assets/styles/components/popup/popup.css
+++ b/assets/styles/components/popup/popup.css
@@ -205,6 +205,10 @@
         width: 48px;
         height: 48px;
     }
+    .some-popup__wrapper{
+        width: 100%;
+        height: 100%;
+    }
 
     .some-popup_secondary .some-popup__wrapper {
         margin: 0 16px;
