--- a/assets/styles/components/universal-filter/universal-filter.css
+++ b/assets/styles/components/universal-filter/universal-filter.css
@@ -15,7 +15,7 @@
 }
 .universal__filter-items{
     position: absolute;
-    top: 70px;
+    top: 0px;
     background-color: var(--white-color);
     left: 0;
     padding: 16px;
@@ -24,10 +24,19 @@
     opacity: 0;
     visibility: hidden;
     transition: .4s;
+    border-radius: 8px;
+    gap: 15px;
+    display: flex;
+    flex-direction: column;
 }
 .universal__filter-items.active{
     opacity: 1;
     visibility: visible;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15), 0px 4px 12px 3px rgba(0, 0, 0, 0.10);
+    
+}
+.universal__filter.active .img{
+    transform: rotate(180deg);
 }
 @media (max-width:800px) {
     .universal__filter{
