--- a/assets/styles/components/universal-tabs/universal-tabs.css
+++ b/assets/styles/components/universal-tabs/universal-tabs.css
@@ -13,6 +13,7 @@
 }
 .universal__tab.primary{
     background: var(--primary-color);
+    color: var(--white-color);
 }
 .universal__tab.orange{
     background: var(--orange-color);
