--- a/pages/lk_score_and_rating/lk_scode_and_rating.css
+++ b/pages/lk_score_and_rating/lk_scode_and_rating.css
@@ -37,7 +37,6 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    max-height: 347px;
     overflow: auto;
 }
 .some-popup-score-item{
@@ -85,5 +84,8 @@
 @media (max-width:600px) {
     .some-popup-score-btn{
         display: block;
+    }
+    .profile-right-score__rating{
+        flex-direction: column;
     }
 }
