--- a/assets/styles/components/popup/popup.css
+++ b/assets/styles/components/popup/popup.css
@@ -227,6 +227,10 @@
         width: 48px;
         height: 48px;
     }
+    .some-popup__wrapper{
+        width: 100%;
+        height: 100%;
+    }
 
     .some-popup__wrapper {
         width: 100%;
